required, changed buttons, hover zoom, deleted unused code

--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -77,7 +77,7 @@
             <p class="discoverPresetsText">
               In this step you are able to go through every part of this program to see if it's the right one for you.
             </p>
-            <button class="button-28" id="downButton">Show more</button>
+            <button class="button-28" id="downButton">See all the parts</button>
           </section>
           <section class="presetSlideshow">
             <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration1.webp" />
@@ -147,10 +147,10 @@
     </section>
     <section class="navigationButtonsDesktop">
       <button class="btn1-light">
-        <a href="style-your-wedding.html">Previous step</a>
+        <a href="style-your-wedding.html">Back to decoration presets</a>
       </button>
       <button class="btn1-light">
-        <a href="flower-availability.html">Next step</a>
+        <a href="flower-availability.html">See what flowers are available</a>
       </button>
     </section>
     <!-- MObile Version start MANGE TAK for carousel goes to https://www.youtube.com/watch?v=KtsVC_JRxCU&ab_channel=codefoxx-->
