--- a/contact.html
+++ b/contact.html
@@ -110,8 +110,8 @@
         <p>Bridesmaids decorations</p>
         <p>Other decorations</p>
         <section class="navigationButtonsDesktopContact">
-          <a href="style-your-wedding.html">
-            <button class="btn1-light">Previous step</button>
+          <a href="flower-availability.html">
+            <button class="btn1-light buttonWidthFix">Back to flower availability</button>
           </a>
         </section>
       </section>
@@ -126,9 +126,9 @@
             By contacting us, we will receive your customisation and then we will be able to give you a price estimate
           </p>
           <form action="https://formsubmit.co/sosiso4ki64@gmail.com" method="POST">
-            <input type="text" name="name" placeholder="Name" class="contactInput" />
+            <input type="text" required name="name" placeholder="Name" class="contactInput" />
             <br />
-            <input type="text" name="email" placeholder="E-mail" class="contactInput" />
+            <input type="text" required name="email" placeholder="E-mail" class="contactInput" />
             <br />
             <input type="text" name="phone" placeholder="Phone" class="contactInput" />
             <br />
@@ -156,9 +156,9 @@
             By contacting us, we will receive your customisation and then we will be able to give you a price estimate
           </p>
           <form action="https://formsubmit.co/sosiso4ki64@gmail.com" method="POST">
-            <input type="text" name="Name" placeholder="Name" class="contactInput" />
+            <input type="text" required name="Name" placeholder="Name" class="contactInput" />
             <br />
-            <input type="email" name="email" placeholder="E-mail" class="contactInput" />
+            <input type="email" required name="email" placeholder="E-mail" class="contactInput" />
             <br />
             <input type="text" name="phone" placeholder="Phone" class="contactInput" />
             <br />
@@ -169,7 +169,7 @@
       </section>
       <section class="navigationButtonsMobileContact">
         <button class="btn1-light">
-          <a href="style-your-wedding.html">Previous step</a>
+          <a href="flower-availability.html">Previous step</a>
         </button>
       </section>
     </section>
