--- a/flower-availability.html
+++ b/flower-availability.html
@@ -79,7 +79,7 @@
           <p class="inspired">
             Because every season has its unique flowers, here you can see which are available in season your wedding is expected to take a place.
           </p>
-          <button class="button-main" id="downButton">Show more</button>
+          <button class="button-main" id="downButton">See the flowers</button>
         </section>
         <section class="presetSlideshow">
           <img class="mySlides2" alt="slideshow picture" src="img/flowers/summer4.webp" />
@@ -185,11 +185,11 @@
     </section>
     <section class="seasons-btns-desktop">
       <a href="presetParts.html">
-        <button class="btn1-light">Previous step</button>
+        <button class="btn1-light">Back to preset preview</button>
       </a>
 
       <a href="contact.html">
-        <button class="btn1-light">Next step</button>
+        <button class="btn1-light">See your configuration</button>
       </a>
     </section>
 
