--- a/presetParts.html
+++ b/presetParts.html
@@ -76,7 +76,7 @@
             <p class="inspired">
               In this step you are able to go through every part of this program to see if it's the right one for you.
             </p>
-            <button class="button-main" id="downButton">Show more</button>
+            <button class="button-main" id="downButton">See all the parts</button>
           </section>
           <section class="presetSlideshow">
             <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration1.webp" />
@@ -183,11 +183,11 @@
 
     <section class="navigationButtonsDesktop">
       <a href="style-your-wedding.html">
-        <button class="btn1-light">Previous step</button>
+        <button class="btn1-light">Back to decoration presets</button>
       </a>
 
       <a href="flower-availability.html">
-        <button class="btn1-light">Next step</button>
+        <button class="btn1-light">See what flowers are available</button>
       </a>
     </section>
     <!-- MObile Version start MANGE TAK for carousel goes to https://www.youtube.com/watch?v=KtsVC_JRxCU&ab_channel=codefoxx-->
