--- a/partialProgramme.html
+++ b/partialProgramme.html
@@ -11,6 +11,8 @@
     <!--Link to css sheet-->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styleForPresets.css" />
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp" />
     <title>Kvety Cemerica</title>
   </head>
@@ -184,8 +186,72 @@
     <!-- part1-->
     <section class="bouquetePart">
       <h2 class="underlineLong">Bouquet for bride</h2>
-
-      <img class="shownProduct" src="img/bouquet2.webp" alt="Flower Bouquetes" />
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/bouquet1.webp" alt="Flower Bouquetes" />
+            <p class="swipeText">Swipe</p>
+            <svg
+              class="swipeLine"
+              xmlns="http://www.w3.org/2000/svg"
+              width="95.5"
+              height="14.916"
+              viewBox="0 0 95.5 14.916"
+            >
+              <g id="Сгруппировать_62" data-name="Сгруппировать 62" transform="translate(388 1650.958) rotate(180)">
+                <g id="Сгруппировать_60" data-name="Сгруппировать 60">
+                  <line
+                    id="Линия_66"
+                    data-name="Линия 66"
+                    x2="95"
+                    transform="translate(292.5 1643.5)"
+                    fill="none"
+                    stroke="#fff"
+                    stroke-width="1"
+                  />
+                  <line
+                    id="Линия_68"
+                    data-name="Линия 68"
+                    x1="16"
+                    y1="7"
+                    transform="translate(371.5 1636.5)"
+                    fill="none"
+                    stroke="#fff"
+                    stroke-width="1"
+                  />
+                  <line
+                    id="Линия_69"
+                    data-name="Линия 69"
+                    x1="16"
+                    y2="7"
+                    transform="translate(371.5 1643.5)"
+                    fill="none"
+                    stroke="#fff"
+                    stroke-width="1"
+                  />
+                </g>
+                <g
+                  id="Эллипс_17"
+                  data-name="Эллипс 17"
+                  transform="translate(387 1643)"
+                  fill="#fff"
+                  stroke="#fff"
+                  stroke-width="1"
+                >
+                  <circle cx="0.5" cy="0.5" r="0.5" stroke="none" />
+                  <circle cx="0.5" cy="0.5" fill="none" />
+                </g>
+              </g>
+            </svg>
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/bouquet2.webp" alt="Flower Bouquetes" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/bouquet3.webp" alt="Flower Bouquetes" />
+          </div>
+        </div>
+      </div>
       <h3></h3>
       <section>
         <h4 class="underlineLong">Possible options</h4>
@@ -195,8 +261,19 @@
     <!-- part2-->
     <section class="bouquetePart">
       <h2 class="underlineLong">Feathers for wedding guests</h2>
-
-      <img class="shownProduct" src="img/buttonholes1.webp" alt="buttoiere" />
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/buttonholes1.webp" alt="buttoniere" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/buttonholes2.webp" alt="buttoniere" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/buttonholes3.webp" alt="buttoniere" />
+          </div>
+        </div>
+      </div>
       <h3></h3>
       <section>
         <h4 class="underlineLong">Possible options</h4>
@@ -206,8 +283,19 @@
     <!--part3-->
     <section class="bouquetePart">
       <h2 class="underlineLong">Wedding hall decorations</h2>
-
-      <img class="shownProduct" src="img/weddingvenue1.webp" alt="Wedding venue" />
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/weddingvenue1.webp" alt="Wedding venue" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/weddingvenue2.webp" alt="Wedding venue" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/weddingvenue3.webp" alt="Wedding venue" />
+          </div>
+        </div>
+      </div>
       <h3></h3>
       <section>
         <h4 class="underlineLong">Possible options</h4>
@@ -217,8 +305,19 @@
     <!--part5-->
     <section class="bouquetePart">
       <h2 class="underlineLong">Bridesmaids decorations</h2>
-
-      <img class="shownProduct" src="img/bridesmatesdecoration2.webp" alt="bridesmaids decoration" />
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/bridesmatesdecoration1.webp" alt="bridesmaids bridesmatesdecoration" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/bridesmatesdecoration2.webp" alt="bridesmaids decoration" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/bridesmatesdecoration3.webp" alt="bridesmaids decoration" />
+          </div>
+        </div>
+      </div>
       <h3></h3>
       <section>
         <h4 class="underlineLong">Possible options</h4>
@@ -228,8 +327,19 @@
     <!--part6-->
     <section class="bouquetePart">
       <h2 class="underlineLong">Other decorations</h2>
-
-      <img class="shownProduct" src="img/otherdecorations1.webp" alt="bridesmaids decorations" />
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/otherdecorations1.webp" alt="Other decorations" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/otherdecorations2.webp" alt="Other decorations" />
+          </div>
+          <div class="swiper-slide">
+            <img class="shownProduct" src="img/otherdecorations3.webp" alt="Other decorations" />
+          </div>
+        </div>
+      </div>
       <h3></h3>
       <section>
         <h4 class="underlineLong">Possible options</h4>
@@ -238,13 +348,16 @@
         </p>
       </section>
     </section>
+
+    <!--/* Swiper JS */-->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
     <section class="sliderButtons">
       <div class="slider-cell slider" id="slid1" onclick="currentPresetSlideMob(1)"></div>
       <div class="slider-cell slider" id="slid2" onclick="currentPresetSlideMob(2)"></div>
       <div class="slider-cell slider" id="slid3" onclick="currentPresetSlideMob(3)"></div>
       <div class="slider-cell slider" id="slid5" onclick="currentPresetSlideMob(4)"></div>
       <div class="slider-cell slider" id="slid6" onclick="currentPresetSlideMob(5)"></div>
-      <div class="slider-cell slider" id="slid7" onclick="currentPresetSlideMob(6)"></div>
     </section>
     <section class="navigationButtonsMobile">
       <button class="btn1-light">
