style issues on parial and base , deleted random, fixed buttons,

--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -72,14 +72,14 @@
     <div id="preset-container">
       <section>
         <div id="presetPreview">
-          <section class="preview-text">
+          <section class="featured-text">
             <p class="featured-inspired">Get inspired</p>
             <hr width="90%" />
             <p id="inspiration">Wedding inspiration</p>
-            <p class="discoverPresetsText">
+            <p class="inspired">
               In this step you are able to go through every part of this program to see if it's the right one for you.
             </p>
-            <button class="button-28" id="downButton">See all the parts</button>
+            <button class="button-main" id="downButton">See all the parts</button>
           </section>
           <section class="presetSlideshow">
             <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration1.webp" />
@@ -148,12 +148,13 @@
       <img class="presetPictureDesktop" src="img/otherdecorations3.webp" alt="Bridesmaids decoration" />
     </section>
     <section class="navigationButtonsDesktop">
-      <button class="btn1-light">
-        <a href="style-your-wedding.html">Back to decoration presets</a>
-      </button>
-      <button class="btn1-light">
-        <a href="flower-availability.html">See what flowers are available</a>
-      </button>
+      <a href="style-your-wedding.html">
+        <button class="btn1-light">Back to decoration presets</button>
+      </a>
+
+      <a href="flower-availability.html">
+        <button class="btn1-light">See what flowers are available</button>
+      </a>
     </section>
     <!-- MObile Version start MANGE TAK for carousel goes to https://www.youtube.com/watch?v=KtsVC_JRxCU&ab_channel=codefoxx-->
     <div class="carousel fadePreview"></div>
