--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -64,7 +64,7 @@
     
 
  <!-- featured-->
-           <!-- MObile Version start/ carousel -->
+           <!-- Mobile Version start/ carousel -->
            <div class="carousel fadePreview"></div>
             
     <section id="featured-container">
@@ -79,16 +79,6 @@
             </div>
             <div class="featuredImgFrame">
                 <img class="featuredImg" alt="Decoration" src="img/cardecoration3.webp">
-            </div>
-        </div>
-            <div class="featured-text">
-                <p class="featured-inspired">Get inspired</p>   
-                <p id="inspiration">Preset configurator</p>
-                <hr width="90%">    
-                <p class="inspired">In this step you are able to go trough every part of this bundle to see if it´s the right one for you</p>
-                <a href="style-your-wedding.html">
-                    <button class="btn1-light">See our presets</button>
-                </a>     
             </div>
         </div>
     </section>
