delet unnecessary , fixed button on contact, switched colors as requested on slideshow

--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
         <p>Car decorations</p>
         <p>Bridesmaids decorations</p>
         <p>Other decorations</p>
-        <section class="navigationButtonsDesktopContact">
+        <section>
           <a href="flower-availability.html">
             <button class="btn1-light buttonWidthFix">Back to flower availability</button>
           </a>
