slideshow preview cards fixed

--- a/flower-availability.html
+++ b/flower-availability.html
@@ -86,15 +86,16 @@
           <img class="mySlides2" alt="slideshow picture" src="img/flowers/spring1.webp" />
           <img class="mySlides2" alt="slideshow picture" src="img/flowers/summer2.webp" />
           <section class="slideShowPreset" style="width: 100%">
-            <div class="slider-cell white-cell" id="slid1" onclick="currentDiv(1)"></div>
-            <div class="slider-cell white-cell" id="slid2" onclick="currentDiv(2)"></div>
-            <div class="slider-cell white-cell" id="slid3" onclick="currentDiv(3)"></div>
+            <div class="slider-cellActive white-cell" id="slid1" onclick="currentDiv(1)"></div>
+            <div class="slider-cellActive white-cell" id="slid2" onclick="currentDiv(2)"></div>
+            <div class="slider-cellActive white-cell" id="slid3" onclick="currentDiv(3)"></div>
 
           </section>
         </div>
       </section>
     </div>
     <!-- Season explanation END-->
+    
 
     <section class="season-title">
       <p class="headstyle1 underlineD" >Season wheel</p>
