--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -82,6 +82,33 @@
             </div>
         </div>
     </section>
+
+
+    <!--DESKTOP VERSION-->
+    <div id="preset-container">
+        <section>
+          <div id="presetPreview">
+            <section class="featured-text">
+              <p class="featured-inspired">Discover</p>
+              <hr width="90%" />
+              <p id="inspiration">Our preset configurator</p>
+              <p class="inspired">Welcome to our unique wedding configurator where you can choose from many options we are providing so your very special day will be exactly as you wish to be
+              </p>
+              <button class="button-main" id="downButton">Show more</button>
+            </section>
+            <section class="presetSlideshow">
+              <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration1.webp" />
+              <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration2.webp" />
+              <img class="mySlides2" alt="slideshow picture" src="img/buttonholes1.webp" />
+              <section class="slideShowPreset" style="width: 100%">
+                <div class="slider-cellActive white-cell" id="slid1" onclick="currentDiv(1)"></div>
+                <div class="slider-cellActive white-cell" id="slid2" onclick="currentDiv(2)"></div>
+                <div class="slider-cellActive white-cell" id="slid3" onclick="currentDiv(3)"></div>
+              </section>
+            </section>
+          </div>
+        </section>
+      </div>
 <!-- featured END-->
 
 
