fixed minor issues , finished slideshows on desktop, smaller video,

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
           <section class="featured-text">
             <p class="featured-inspired">Discover</p>
             <hr width="90%" />
-            <p id="inspiration">Configuration preview</p>
+            <p id="inspiration">Our preset configurator</p>
             <p class="inspired">
               This is your last step to perfect wedding day. In this step you can see your configuration, here you can
               also choose to contact us so we can talk more about your requirements
@@ -93,6 +93,7 @@
         </div>
       </section>
     </div>
+    <!-- featured END-->
     <!-- contact desktop grid-->
     <h6 class="underlineDLong configurationHeadingFix">Your configuration</h6>
     <section class="contactDesktopHeadingsGrid">
