--- a/index.html
+++ b/index.html
@@ -362,18 +362,18 @@
         <div class="chooseus-content">
             <section>
             <div class="chooseUsText">
-                <p class="text-cont" >Our passion and interest for the industry brought us local partners, who offered us partnership and gave us the opportunity to grow as a company.
+                <p class="text-contFix" >Our passion and interest for the industry brought us local partners, who offered us partnership and gave us the opportunity to grow as a company.
                     Every flower we use in our atelier comes from the local farm Burina, where no chemicals are used so the flowers can last longer, grow pure and beautiful.
                     And because our focus is the customer’s joy, Laura bakery partnered with us in the process and now she is providing us with sweets, for extra smiles.
                     </p>     
             </div>
         </section>
         <section>
-            <img loading="lazy" class="mindsetImg" width="400px" src="./img/farm2.webp"></img>
+            <img loading="lazy" class="mindsetImgThird" width="400px" src="./img/farm2.webp"></img>
             <a href="https://www.farmaburina.sk/"><p  class="flowerNBakeryFix underlineDLong">Flower farm Burina</p></a>
         </section>
         <section>
-        <img loading="lazy" class="mindsetImg" width="400px" src="./img/bakery.webp"></img>
+        <img loading="lazy" class="mindsetImgThird" width="400px" src="./img/bakery.webp"></img>
         <a href="https://instagram.com/lauri.torticky?igshid=YmMyMTA2M2Y="><p  class="flowerNBakeryFix underlineDLong">Laura's Bakery &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</p></a>
     </section>
     </div>
