--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -66,24 +66,6 @@
  <!-- featured-->
            <!-- Mobile Version start/ carousel -->
            <div class="carousel fadePreview"></div>
-            
-    <section id="featured-container">
-
-        <div id="featured">
-            <div class="featured-text">
-                <p class="featured-inspired">Discover</p>
-                    <hr width="90%">
-                <p id="inspiration">Our preset configurator</p>    
-                <p class="inspired">Welcome to our unique wedding configurator where you can choose from many options we are providing so your very special day will be exactly as you wish to be</p>     
-                <button class="button-main" id="downButton" >Show more</button>
-            </div>
-            <div class="featuredImgFrame">
-                <img class="featuredImg" alt="Decoration" src="img/cardecoration3.webp">
-            </div>
-        </div>
-    </section>
-
-
     <!--DESKTOP VERSION-->
     <div id="preset-container">
         <section>
@@ -241,8 +223,8 @@
                 <hr class="line-mobile"> 
                 <p class="text-cont2">This preset most of our products that are favorite among customers</p>
                 <p class="text-cont2">Price from - 1000&#8364</p>
-                <div>
-                    <a href="partialProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
+                <div class="centerButtonFix">
+                    <a href="partialProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
                 </div>
             </div>
 
@@ -262,8 +244,8 @@
                 <hr class="line-mobile"> 
                 <p class="text-cont2">In our base preset you will find most common parts</p>
                 <p class="text-cont2">Price from - 700&#8364</p>
-                <div>
-                    <a href="baseProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">choose this program</button></a>
+                <div  class="centerButtonFix">
+                    <a href="baseProgramme.html"> <button class="btn1-light" id="prog-mobile-btn">Choose this program</button></a>
                 </div>
             </div>
 
