--- a/baseProgramme.html
+++ b/baseProgramme.html
@@ -86,9 +86,12 @@
             <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration2.webp" />
             <img class="mySlides2" alt="slideshow picture" src="img/buttonholes1.webp" />
             <section class="slideShowPreset" style="width: 100%">
-              <div class="slider-cellActive white-cell" id="slid1" onclick="currentDiv(1)"></div>
-              <div class="slider-cellActive white-cell" id="slid2" onclick="currentDiv(2)"></div>
-              <div class="slider-cellActive white-cell" id="slid3" onclick="currentDiv(3)"></div>
+              <div class="slider-cellActive
+               white-cell" id="slid1" onclick="currentDiv(1)"></div>
+              <div class="slider-cellActive
+               white-cell" id="slid2" onclick="currentDiv(2)"></div>
+              <div class="slider-cellActive
+               white-cell" id="slid3" onclick="currentDiv(3)"></div>
             </section>
           </section>
         </div>
