added logics for language switch and storing values + renamed

--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -108,7 +108,7 @@
         <div class="programs-container">
 
             <div class="prog-it-cont">
-                <a href="presetParts.html">
+                <a href="presetParts.html" onclick="storeClickedProgram('program1')">
                 <div class="prog-img">
                     <img src="img/program3.webp" alt="plus icon" class="whitePlus">
                         <div class="middle">
@@ -136,7 +136,7 @@
             </div>
 
             <div class="prog-it-cont">
-                <a href="partialProgramme.html">
+                <a href="partialProgramme.html" onclick="storeClickedProgram('program2')">
                 <div class="prog-img">
                     <img src="img/program2.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
@@ -158,7 +158,7 @@
             </div>
 
             <div class="prog-it-cont">
-                <a href="baseProgramme.html">
+                <a href="baseProgramme.html" onclick="storeClickedProgram('program3')">
                 <div class="prog-img">
                     <img src="img/program1.webp" alt="PLus icon" class="whitePlus">
                         <div class="middle">
