added translation, renamed files to one standart

--- a/base-programme.html
+++ b/base-programme.html
@@ -63,6 +63,8 @@
           <li class="nav-mobile">
             <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
+          <a href="base-programme.html">English</a>
+          <a href="základný-program.html">Slovak</a>
         </ul>
       </nav>
 
@@ -86,12 +88,9 @@
             <img class="mySlides2" alt="slideshow picture" src="img/bridesmatesdecoration2.webp" />
             <img class="mySlides2" alt="slideshow picture" src="img/buttonholes1.webp" />
             <section class="slideShowPreset" style="width: 100%">
-              <div class="slider-cellActive
-               white-cell" id="slid1" onclick="currentDiv(1)"></div>
-              <div class="slider-cellActive
-               white-cell" id="slid2" onclick="currentDiv(2)"></div>
-              <div class="slider-cellActive
-               white-cell" id="slid3" onclick="currentDiv(3)"></div>
+              <div class="slider-cellActive white-cell" id="slid1" onclick="currentDiv(1)"></div>
+              <div class="slider-cellActive white-cell" id="slid2" onclick="currentDiv(2)"></div>
+              <div class="slider-cellActive white-cell" id="slid3" onclick="currentDiv(3)"></div>
             </section>
           </section>
         </div>
