--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,8 @@
           <li class="nav-mobile">
             <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
+          <a href="contact.html">English</a>
+          <a href="kontakt.html">Slovak</a>
         </ul>
       </nav>
 
