--- a/flower-availability.html
+++ b/flower-availability.html
@@ -62,6 +62,8 @@
           <li class="nav-mobile">
             <a class="nav-link" href="" class="nav-link">Bouquetes</a>
           </li>
+          <a href="flower-availability.html" >English</a>
+          <a href="dostupnosť-kvetov.html">Slovak</a>
         </ul>
       </nav>
       <hr size="2" height="10px" color="black" />
