--- a/full-programme.html
+++ b/full-programme.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" type="image/jpg" href="img/favicon.webp" />
     <title>Kvety Cemerica</title>
   </head>
- 
+
   <body onload="currentDiv(1); currentPresetSlide(1); currentPresetSlideMob(1)">
     <style>
       a:link {
@@ -63,6 +63,8 @@
           <li class="nav-mobile">
             <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
+          <a href="full-programme.html">English</a>
+          <a href="kompletný-program.html">Slovak</a>
         </ul>
       </nav>
 
