--- a/style-your-wedding.html
+++ b/style-your-wedding.html
@@ -54,6 +54,8 @@
                 <li class="nav-mobile">
                     <a class="nav-link"href="404.hmtl" class="nav-link">Bouquetes</a>
                 </li>
+                <a href="style-your-wedding.html" >English</a>
+                <a href="štýl-vašej-svadby.html">Slovak</a=>
             </ul>
         </nav>
 
