--- a/error-404.html
+++ b/error-404.html
@@ -66,6 +66,8 @@
           <li class="nav-mobile">
             <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
+          <a href="error-404.html" >English</a>
+          <a href="chyba-404.html">Slovak</a=>
         </ul>
       </nav>
 
