--- a/homepage.html
+++ b/homepage.html
@@ -60,7 +60,10 @@
                 <li class="nav-mobile">
                     <a class="nav-link"href="404.html" class="nav-link">Bouquetes</a>
                 </li>
+                <a href="homepage.html" >English</a>
+                <a href="domovská-stránka.html">Slovak</a>
             </ul>
+
         </nav>
         <hr size="2" height="10px" color="black">
     </header>
