--- a/partial-programme.html
+++ b/partial-programme.html
@@ -63,6 +63,8 @@
           <li class="nav-mobile">
             <a class="nav-link" href="404.html" class="nav-link">Bouquetes</a>
           </li>
+          <a href="partial-programme.html">English</a>
+          <a href="ciastkový-program.html">Slovak</a>
         </ul>
       </nav>
 
