--- a/štýl-vašej-svadby.html
+++ b/štýl-vašej-svadby.html
@@ -40,6 +40,8 @@
      <div class="vl hiddenVl"></div> 
      <li class="nav-item-desk"><a class="nav-link" href="404.html">Bouquetes</a></li> 
      <li class="nav-mobile"><a class="nav-link" href="404.hmtl">Bouquetes</a></li> 
+     <a href="style-your-wedding.html" >English</a>
+     <a href="štýl-vašej-svadby.html">Slovak</a=>
     </ul> 
    </nav>
    <hr color="black" height="10px" size="2">
